<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, EDBActivity!</string>
    <string name="app_name">EDB</string>
    <string name="changelog">Changelog</string>
    <string name="encrypted">Encrypted</string>
    <string name="database">Database</string>
    <string name="first_dialog_text">I strongly recommend you read the help page before using this app. It has useful tips, instructions, and warnings. Click help to go there now.</string>
	<string name="help">Help</string>
	<string name="read_cap">READ</string>
	<string name="write">Write</string>
	<string name="read">Read</string>
	<string name="about">About</string>
	<string name="new_file">New File</string>
	<string name="new_file_prompt">New File Name:</string>
	<string name="read_write">Read/Write</string>
	<string name="enter">Enter</string>
	<string name="delete">Delete</string>
	<string name="new_file_one">1) Click the New File button on the Main Screen</string>
	<string name="new_file_two">2) Enter a name for the file and click "Create"</string>
	<string name="add_line">Writing Lines</string>
	<string name="add_line_one">1) Enter text in the textbox</string>
	<string name="add_line_two">2) Click the Enter button or click Done on the soft keyboard and the text will be saved</string>
	<string name="new_file_title">Adding New Files</string>
	<string name="read_file">Reading Files</string>
	<string name="read_file_one">1) Just select a file to read from the list on the Home Screen</string>
	<string name="read_file_two">2) And start reading</string>
	<string name="delete_file">Deleting Files</string>
	<string name="delete_file_one">1) Click the Delete button or hit menu to bring up the Delete button</string>
	<string name="delete_file_two">2) Then click Delete on the Confirm Dialog Box, dummy\nOR\n1) Long press the file on the Main Menu to pull up the Options Dialog for the file</string>
	<string name="encrypt">Encryption</string>
	<string name="encrypt_one">EDB\'s file encryption is unique to any system you\'ve seen in the past. Each file has a unique method for encryption. The files stored on your phone are encrypted themselves, so even if one does find them, your secrets are safe.</string>
    <string name="password_title">Password</string>
    <string name="password_one">Passwords are optional, because you should set a lockscreen pattern or password. However, should you want one, simply go to this app\'s Settings</string>
	<string name="warning">Warning</string>
	<string name="warning_one">This encryption method is NOT guarenteed. Use at your own risk. Also THERE IS NO WAY TO EDIT A LINE AFTER IT IS ENTERED! We may fix this in future versions, but as of now it is impossible.</string>
	<string name="settings">Settings</string>
	<string name="setting_password">Click here to set a super cool password!</string>
	<string name="password_prompt_one">Enter a password:</string>
	<string name="password_prompt_two">Enter it again:</string>
	<string name="password_remove">Remove Password</string>
	<string name="password_prompt">Please enter your password:</string>
	<string name="export">Export</string>
	<string name="export_file">Exporting Files</string>
	<string name="export_file_one">1) Click the Export button when viewing the file\nOR\n1)Long press the file on the Main Menu to pull up the Options Dialog for the file\n2) After either method a Toast Notification will come up looking like this:</string>
    <string name="export_file_two">3) Exported files are saved in the EDB folder on your SD Card</string>
    
</resources>