<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item
        android:id="@+id/add_menu_item"
        android:title="@string/new_file"
        android:icon="@drawable/add_light"
        android:showAsAction="always|withText" ></item>
    <item
        android:id="@+id/settings_menu_item"
        android:title="@string/settings"
        android:icon="@drawable/settings"
        android:showAsAction="always|withText" ></item> <item
        android:id="@+id/help_menu_item"
        android:title="@string/help"
        android:icon="@drawable/help"
        android:showAsAction="never" ></item>
    <item
        android:id="@+id/changelog_menu_item"
        android:title="@string/changelog"
        android:icon="@drawable/time"
        android:showAsAction="never" ></item>
   
    
	</menu>